Phase2/files/syntax.output
Grammar

    0 $accept: program $end

    1 program: stmts
    2        | /* empty */

    3 stmts: stmt
    4      | stmts stmt

    5 stmt: expression ";"
    6     | ifstmt
    7     | whilestmt
    8     | forstmt
    9     | returnstmt
   10     | "break" ";"
   11     | "continue" ";"
   12     | block
   13     | funcdef
   14     | ";"

   15 expression: assignexpr
   16           | term
   17           | expression "+" expression
   18           | expression "-" expression
   19           | expression "*" expression
   20           | expression "/" expression
   21           | expression "%" expression
   22           | expression "==" expression
   23           | expression "!=" expression
   24           | expression "<" expression
   25           | expression ">" expression
   26           | expression "<=" expression
   27           | expression ">=" expression
   28           | expression "and" expression
   29           | expression "or" expression

   30 term: "(" expression ")"
   31     | "-" expression
   32     | "not" expression
   33     | "++" lvalue
   34     | lvalue "++"
   35     | "--" lvalue
   36     | lvalue "--"
   37     | primary

   38 assignexpr: lvalue "=" expression

   39 primary: lvalue
   40        | call
   41        | objectdef
   42        | "(" funcdef ")"
   43        | const

   44 lvalue: ID
   45       | "local" ID
   46       | "::" ID
   47       | member

   48 member: lvalue "." ID
   49       | lvalue "[" expression "]"
   50       | call "." ID
   51       | call "[" expression "]"

   52 call: call "(" elist ")"
   53     | lvalue callsuffix
   54     | "(" funcdef ")" "(" elist ")"

   55 callsuffix: normcall
   56           | methodcall

   57 normcall: "(" elist ")"

   58 methodcall: ".." ID "(" elist ")"

   59 elist: expression
   60      | elist "," expression

   61 objectdef: "[" elist "]"
   62          | "[" indexed "]"
   63          | "[" "]"

   64 indexed: indexedelem
   65        | indexedelem "," indexedelem

   66 indexedelem: "{" expression ":" expression "}"

   67 openblock: "{" stmt
   68          | openblock stmt

   69 @1: /* empty */

   70 @2: /* empty */

   71 block: "{" @1 "}" @2

   72 @3: /* empty */

   73 block: openblock "]" @3

   74 funcdef: "function" ID "(" idlist ")" block
   75        | "function" "(" ")" block

   76 const: INT
   77      | REAL
   78      | STRING
   79      | "nil"
   80      | "true"
   81      | "false"

   82 idlist: ID
   83       | idlist "," ID

   84 ifstmt: "if" "(" expression ")" stmt
   85       | "if" "(" expression ")" stmt "else" stmt

   86 whilestmt: "while" "(" expression ")" stmt

   87 forstmt: "for" "(" elist ";" expression ";" elist ")" stmt

   88 returnstmt: "return" expression ";"
   89           | "return" ";"


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 44 45 46 48 50 58 74 82 83
STRING (259) 78
INT (260) 76
REAL (261) 77
"(" (262) 30 42 52 54 57 58 74 75 84 85 86 87
")" (263) 30 42 52 54 57 58 74 75 84 85 86 87
"[" (264) 49 51 61 62 63
"]" (265) 49 51 61 62 63 73
"{" (266) 66 67 71
"}" (267) 66 71
";" (268) 5 10 11 14 87 88 89
"," (269) 60 65 83
":" (270) 66
"::" (271) 46
"." (272) 48 50
".." (273) 58
"+" (274) 17
"-" (275) 18 31
"*" (276) 19
"/" (277) 20
"++" (278) 33 34
"--" (279) 35 36
"%" (280) 21
"=" (281) 38
"==" (282) 22
"!=" (283) 23
"<" (284) 24
">" (285) 25
"<=" (286) 26
">=" (287) 27
"and" (288) 28
"not" (289) 32
"or" (290) 29
"if" (291) 84 85
"else" (292) 85
"while" (293) 86
"true" (294) 80
"false" (295) 81
"nil" (296) 79
"return" (297) 88 89
"function" (298) 74 75
"break" (299) 10
"continue" (300) 11
"local" (301) 45
"for" (302) 87
NEGATIVE_VAL (303)
LOWER_THAN_ELSE (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1 2, on right: 0
stmts (52)
    on left: 3 4, on right: 1 4
stmt (53)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 3 4 67 68 84 85 86
    87
expression (54)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29,
    on right: 5 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 38
    49 51 59 60 66 84 85 86 87 88
term (55)
    on left: 30 31 32 33 34 35 36 37, on right: 16
assignexpr (56)
    on left: 38, on right: 15
primary (57)
    on left: 39 40 41 42 43, on right: 37
lvalue (58)
    on left: 44 45 46 47, on right: 33 34 35 36 38 39 48 49 53
member (59)
    on left: 48 49 50 51, on right: 47
call (60)
    on left: 52 53 54, on right: 40 50 51 52
callsuffix (61)
    on left: 55 56, on right: 53
normcall (62)
    on left: 57, on right: 55
methodcall (63)
    on left: 58, on right: 56
elist (64)
    on left: 59 60, on right: 52 54 57 58 60 61 87
objectdef (65)
    on left: 61 62 63, on right: 41
indexed (66)
    on left: 64 65, on right: 62
indexedelem (67)
    on left: 66, on right: 64 65
openblock (68)
    on left: 67 68, on right: 68 73
block (69)
    on left: 71 73, on right: 12 74 75
@1 (70)
    on left: 69, on right: 71
@2 (71)
    on left: 70, on right: 71
@3 (72)
    on left: 72, on right: 73
funcdef (73)
    on left: 74 75, on right: 13 42 54
const (74)
    on left: 76 77 78 79 80 81, on right: 43
idlist (75)
    on left: 82 83, on right: 74 83
ifstmt (76)
    on left: 84 85, on right: 6
whilestmt (77)
    on left: 86, on right: 7
forstmt (78)
    on left: 87, on right: 8
returnstmt (79)
    on left: 88 89, on right: 9


state 0

    0 $accept: . program $end

    ID          shift, and go to state 1
    STRING      shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    "("         shift, and go to state 5
    "["         shift, and go to state 6
    "{"         shift, and go to state 7
    ";"         shift, and go to state 8
    "::"        shift, and go to state 9
    "-"         shift, and go to state 10
    "++"        shift, and go to state 11
    "--"        shift, and go to state 12
    "not"       shift, and go to state 13
    "if"        shift, and go to state 14
    "while"     shift, and go to state 15
    "true"      shift, and go to state 16
    "false"     shift, and go to state 17
    "nil"       shift, and go to state 18
    "return"    shift, and go to state 19
    "function"  shift, and go to state 20
    "break"     shift, and go to state 21
    "continue"  shift, and go to state 22
    "local"     shift, and go to state 23
    "for"       shift, and go to state 24

    $default  reduce using rule 2 (program)

    program     go to state 25
    stmts       go to state 26
    stmt        go to state 27
    expression  go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    openblock   go to state 36
    block       go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifstmt      go to state 40
    whilestmt   go to state 41
    forstmt     go to state 42
    returnstmt  go to state 43


state 1

   44 lvalue: ID .

    $default  reduce using rule 44 (lvalue)


state 2

   78 const: STRING .

    $default  reduce using rule 78 (const)


state 3

   76 const: INT .

    $default  reduce using rule 76 (const)


state 4

   77 const: REAL .

    $default  reduce using rule 77 (const)


state 5

   30 term: "(" . expression ")"
   42 primary: "(" . funcdef ")"
   54 call: "(" . funcdef ")" "(" elist ")"

    ID          shift, and go to state 1
    STRING      shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    "("         shift, and go to state 5
    "["         shift, and go to state 6
    "::"        shift, and go to state 9
    "-"         shift, and go to state 10
    "++"        shift, and go to state 11
    "--"        shift, and go to state 12
    "not"       shift, and go to state 13
    "true"      shift, and go to state 16
    "false"     shift, and go to state 17
    "nil"       shift, and go to state 18
    "function"  shift, and go to state 20
    "local"     shift, and go to state 23

    expression  go to state 44
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 45
    const       go to state 39


state 6

   61 objectdef: "[" . elist "]"
   62          | "[" . indexed "]"
   63          | "[" . "]"

    ID       shift, and go to state 1
    STRING   shift, and go to state 2
    INT      shift, and go to state 3
    REAL     shift, and go to state 4
    "("      shift, and go to state 5
    "["      shift, and go to state 6
    "]"      shift, and go to state 46
    "{"      shift, and go to state 47
    "::"     shift, and go to state 9
    "-"      shift, and go to state 10
    "++"     shift, and go to state 11
    "--"     shift, and go to state 12
    "not"    shift, and go to state 13
    "true"   shift, and go to state 16
    "false"  shift, and go to state 17
    "nil"    shift, and go to state 18
    "local"  shift, and go to state 23

    expression   go to state 48
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 49
    objectdef    go to state 35
    indexed      go to state 50
    indexedelem  go to state 51
    const        go to state 39


state 7

   67 openblock: "{" . stmt
   71 block: "{" . @1 "}" @2

    ID          shift, and go to state 1
    STRING      shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    "("         shift, and go to state 5
    "["         shift, and go to state 6
    "{"         shift, and go to state 7
    ";"         shift, and go to state 8
    "::"        shift, and go to state 9
    "-"         shift, and go to state 10
    "++"        shift, and go to state 11
    "--"        shift, and go to state 12
    "not"       shift, and go to state 13
    "if"        shift, and go to state 14
    "while"     shift, and go to state 15
    "true"      shift, and go to state 16
    "false"     shift, and go to state 17
    "nil"       shift, and go to state 18
    "return"    shift, and go to state 19
    "function"  shift, and go to state 20
    "break"     shift, and go to state 21
    "continue"  shift, and go to state 22
    "local"     shift, and go to state 23
    "for"       shift, and go to state 24

    $default  reduce using rule 69 (@1)

    stmt        go to state 52
    expression  go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    openblock   go to state 36
    block       go to state 37
    @1          go to state 53
    funcdef     go to state 38
    const       go to state 39
    ifstmt      go to state 40
    whilestmt   go to state 41
    forstmt     go to state 42
    returnstmt  go to state 43


state 8

   14 stmt: ";" .

    $default  reduce using rule 14 (stmt)


state 9

   46 lvalue: "::" . ID

    ID  shift, and go to state 54


state 10

   31 term: "-" . expression

    ID       shift, and go to state 1
    STRING   shift, and go to state 2
    INT      shift, and go to state 3
    REAL     shift, and go to state 4
    "("      shift, and go to state 5
    "["      shift, and go to state 6
    "::"     shift, and go to state 9
    "-"      shift, and go to state 10
    "++"     shift, and go to state 11
    "--"     shift, and go to state 12
    "not"    shift, and go to state 13
    "true"   shift, and go to state 16
    "false"  shift, and go to state 17
    "nil"    shift, and go to state 18
    "local"  shift, and go to state 23

    expression  go to state 55
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


state 11

   33 term: "++" . lvalue

    ID       shift, and go to state 1
    "("      shift, and go to state 56
    "::"     shift, and go to state 9
    "local"  shift, and go to state 23

    lvalue  go to state 57
    member  go to state 33
    call    go to state 58


state 12

   35 term: "--" . lvalue

    ID       shift, and go to state 1
    "("      shift, and go to state 56
    "::"     shift, and go to state 9
    "local"  shift, and go to state 23

    lvalue  go to state 59
    member  go to state 33
    call    go to state 58


state 13

   32 term: "not" . expression

    ID       shift, and go to state 1
    STRING   shift, and go to state 2
    INT      shift, and go to state 3
    REAL     shift, and go to state 4
    "("      shift, and go to state 5
    "["      shift, and go to state 6
    "::"     shift, and go to state 9
    "-"      shift, and go to state 10
    "++"     shift, and go to state 11
    "--"     shift, and go to state 12
    "not"    shift, and go to state 13
    "true"   shift, and go to state 16
    "false"  shift, and go to state 17
    "nil"    shift, and go to state 18
    "local"  shift, and go to state 23

    expression  go to state 60
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


state 14

   84 ifstmt: "if" . "(" expression ")" stmt
   85       | "if" . "(" expression ")" stmt "else" stmt

    "("  shift, and go to state 61


state 15

   86 whilestmt: "while" . "(" expression ")" stmt

    "("  shift, and go to state 62


state 16

   80 const: "true" .

    $default  reduce using rule 80 (const)


state 17

   81 const: "false" .

    $default  reduce using rule 81 (const)


state 18

   79 const: "nil" .

    $default  reduce using rule 79 (const)


state 19

   88 returnstmt: "return" . expression ";"
   89           | "return" . ";"

    ID       shift, and go to state 1
    STRING   shift, and go to state 2
    INT      shift, and go to state 3
    REAL     shift, and go to state 4
    "("      shift, and go to state 5
    "["      shift, and go to state 6
    ";"      shift, and go to state 63
    "::"     shift, and go to state 9
    "-"      shift, and go to state 10
    "++"     shift, and go to state 11
    "--"     shift, and go to state 12
    "not"    shift, and go to state 13
    "true"   shift, and go to state 16
    "false"  shift, and go to state 17
    "nil"    shift, and go to state 18
    "local"  shift, and go to state 23

    expression  go to state 64
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


state 20

   74 funcdef: "function" . ID "(" idlist ")" block
   75        | "function" . "(" ")" block

    ID   shift, and go to state 65
    "("  shift, and go to state 66


state 21

   10 stmt: "break" . ";"

    ";"  shift, and go to state 67


state 22

   11 stmt: "continue" . ";"

    ";"  shift, and go to state 68


state 23

   45 lvalue: "local" . ID

    ID  shift, and go to state 69


state 24

   87 forstmt: "for" . "(" elist ";" expression ";" elist ")" stmt

    "("  shift, and go to state 70


state 25

    0 $accept: program . $end

    $end  shift, and go to state 71


state 26

    1 program: stmts .
    4 stmts: stmts . stmt

    ID          shift, and go to state 1
    STRING      shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    "("         shift, and go to state 5
    "["         shift, and go to state 6
    "{"         shift, and go to state 7
    ";"         shift, and go to state 8
    "::"        shift, and go to state 9
    "-"         shift, and go to state 10
    "++"        shift, and go to state 11
    "--"        shift, and go to state 12
    "not"       shift, and go to state 13
    "if"        shift, and go to state 14
    "while"     shift, and go to state 15
    "true"      shift, and go to state 16
    "false"     shift, and go to state 17
    "nil"       shift, and go to state 18
    "return"    shift, and go to state 19
    "function"  shift, and go to state 20
    "break"     shift, and go to state 21
    "continue"  shift, and go to state 22
    "local"     shift, and go to state 23
    "for"       shift, and go to state 24

    $default  reduce using rule 1 (program)

    stmt        go to state 72
    expression  go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    openblock   go to state 36
    block       go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifstmt      go to state 40
    whilestmt   go to state 41
    forstmt     go to state 42
    returnstmt  go to state 43


state 27

    3 stmts: stmt .

    $default  reduce using rule 3 (stmts)


state 28

    5 stmt: expression . ";"
   17 expression: expression . "+" expression
   18           | expression . "-" expression
   19           | expression . "*" expression
   20           | expression . "/" expression
   21           | expression . "%" expression
   22           | expression . "==" expression
   23           | expression . "!=" expression
   24           | expression . "<" expression
   25           | expression . ">" expression
   26           | expression . "<=" expression
   27           | expression . ">=" expression
   28           | expression . "and" expression
   29           | expression . "or" expression

    ";"    shift, and go to state 73
    "+"    shift, and go to state 74
    "-"    shift, and go to state 75
    "*"    shift, and go to state 76
    "/"    shift, and go to state 77
    "%"    shift, and go to state 78
    "=="   shift, and go to state 79
    "!="   shift, and go to state 80
    "<"    shift, and go to state 81
    ">"    shift, and go to state 82
    "<="   shift, and go to state 83
    ">="   shift, and go to state 84
    "and"  shift, and go to state 85
    "or"   shift, and go to state 86


state 29

   16 expression: term .

    $default  reduce using rule 16 (expression)


state 30

   15 expression: assignexpr .

    $default  reduce using rule 15 (expression)


state 31

   37 term: primary .

    $default  reduce using rule 37 (term)


state 32

   34 term: lvalue . "++"
   36     | lvalue . "--"
   38 assignexpr: lvalue . "=" expression
   39 primary: lvalue .
   48 member: lvalue . "." ID
   49       | lvalue . "[" expression "]"
   53 call: lvalue . callsuffix

    "("   shift, and go to state 87
    "["   shift, and go to state 88
    "."   shift, and go to state 89
    ".."  shift, and go to state 90
    "++"  shift, and go to state 91
    "--"  shift, and go to state 92
    "="   shift, and go to state 93

    $default  reduce using rule 39 (primary)

    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


state 33

   47 lvalue: member .

    $default  reduce using rule 47 (lvalue)


state 34

   40 primary: call .
   50 member: call . "." ID
   51       | call . "[" expression "]"
   52 call: call . "(" elist ")"

    "("  shift, and go to state 97
    "["  shift, and go to state 98
    "."  shift, and go to state 99

    $default  reduce using rule 40 (primary)


state 35

   41 primary: objectdef .

    $default  reduce using rule 41 (primary)


state 36

   68 openblock: openblock . stmt
   73 block: openblock . "]" @3
